--- a/math-420-bonus.tex
+++ b/math-420-bonus.tex
@@ -44,7 +44,7 @@
 \end{quote}
 
 \noindent  To earn five bonus points, complete the following, digitize your work, and submit it to Canvas before
-midnight on 27 January \the\year.
+\textbf{midnight on 27 January \the\year.}
 
 %\noindent{\textbf{Link to your Overleaf work: }}\url{XXX}
 
