--- a/syllabus-math-420-cybr-304-spring-2024.tex
+++ b/syllabus-math-420-cybr-304-spring-2024.tex
@@ -141,11 +141,11 @@ Exam \rom{\theex}}
 
 \subsubsection*{Grading}
 
-Your course grade will be based on ten homework sets, three midterm exams, and a comprehensive 
+Your course grade will be based on eleven homework sets, three midterm exams, and a comprehensive 
 final exam; specifically:
-\FPeval{\hwpts}{round(20*10,0)}
+\FPeval{\hwpts}{round(20*11,0)}
 \begin{mypar}{0.25in}{0.25in}
-    \textbf{Weekly Homework:}  \emph{10 twenty point assignments}  \dotfill \hwpts\/ (total) \\
+    \textbf{Weekly Homework:}  \emph{11 twenty point assignments}  \dotfill \hwpts\/ (total) \\
     \textbf{Mid-term exams \rom{1}, \rom{2}, \rom{3}:} \emph{100 points each} \dotfill 300 (total)\\
     \textbf{Comprehensive Final exam} \dotfill 150 (total)
 \end{mypar}
@@ -154,7 +154,7 @@ your homework point total will be scaled to \hwpts\/ points.
 There will be a five point bonus that is due the first week of the 
 term.
 
-\FPeval{\points}{round(10*20+300+150,0)}
+\FPeval{\points}{round(11*20+300+150,0)}
 
 \FPeval{\F}{round(\points*0.6-1,0)}
 \FPeval{\Dm}{round(\points*0.6,0)}
@@ -210,33 +210,32 @@ reason; we won't delay an exam because we are behind the
 schedule. Neither will an exam date be moved forward because we are
 ahead of the schedule.
 
-Section numbers for Chapter 6 are from \emph{Tea Time Numerical Analysis.}  
-
-Homework assignments are due at 23:59 local time on Saturday on the week they are assigned. Homework assignments 1 and 2 are due on Saturday 6 February \the\year, for example.
+Homework assignments are due at 11:59 \PM local time on Saturday on the week they are assigned. 
 
 \vspace{0.1in}
 
 \begin{center}
 
-\begin{tabular}  {|l|l|l|l|}
+\begin{tabular}  {|l|l|l|l|l|}
 \hline
-{\bf Week}  & {\bf Week} &  {\bf Section(s)} & {\bf Topic(s)} \\
+{\bf Week}  & {\bf Week} &  {\bf Section(s)} & {\bf Topic(s)} & {\bf Assessment} \\
 \hline \hline 
-\wk    & 1/22 &    \S1.2   &   Introduction to Julia  \hfill \hw \\
-\wk    & 1/29 & \S1.1      &  Floating point numbers \& calculus tools   \hfill \hw  \\
-\wk    & 2/5 &    \S2.1 & Errors and convergence rates    \hfill \hw \\
-\wk    & 2/12  & \S2.2 -- \S2.7 &  Root Finding   \hfill  \hw \\
-\wk    & 2/19 &  \S2.2--\S2.7   &  Root Finding    \hfill \textbf{\ex\-\-, 23 February}   \\
-\wk    & 3/4   &  &  Linear equations  \hfill   \hw    \\
-\wk    & 3/18     & \S3.1--\S3.4 & Interpolation \hfill \hw   \\
-\wk   & 3/25   & \S3.1 -- \S3.4   &   Interpolation   \hfill \hw \\
-\wk  &  4/1   & \S4.1--\S4.2 &  Numerical  integration  \hfill   \hfill \textbf{\ex\-\-, 5 April}  \\
-\wk &  4/8    &   \S4.3 --\S4.4 &   Gaussian integration \& multiple integrals    \hfill \hw  \\
-\wk  & 4/15 &   \S5.1--\S5.2 & Discrete \& continuous least squares  \hfill \hw  \\
-\wk   & 4/22  & \S5.3 &  Orthogonal polynomials and least squares  \hfill \hw  \\
-\wk   & 4/29   & \S6.1--\S6.2   & Differential equations \hfill  \textbf{ \ex, 3 May}     \\
-\wk   & 5/6   &  \S6.3   & Differential equations    \\
-\wk   & 5/13       &  &   \textbf{Final Exam, Monday 13 May,  8:00 am--10:00 am} \\ \hline
+\wk    & 1/22 & \S1.1, \S1.3      &  Floating point numbers \& calculus tools  &  \hw  \\
+\wk    & 1/29 &    \S1.2   &   Introduction to Julia  & \hw \\
+\wk    & 2/5 &    \S2.1 & Errors and convergence rates    & \hw \\
+\wk    & 2/12  & \S2.2 -- \S2.7 &  Root Finding   &  \hw \\
+\wk    & 2/19 &  \S2.2--\S2.7   &  Root Finding    &  \textbf{\ex, 23 Feb}   \\
+\wk    & 2/26 &  class notes                    &    Linear equations                    &    \hw                                  \\
+\wk    & 3/4   &  class notes     &  Linear equations  &   \hw    \\
+\wk    & 3/18     & \S3.1--\S3.4 & Interpolation &  \hw   \\
+\wk   & 3/25   & \S3.1 -- \S3.4   &   Interpolation   & \hw \\
+\wk  &  4/1   & \S4.1--\S4.2 &  Numerical  integration  & \textbf{\ex , 5 April}  \\
+\wk &  4/8    &   \S4.3 --\S4.4 &   Gaussian integration \& multiple integrals   &  \hw  \\
+\wk  & 4/15 &   \S5.1--\S5.2 & Discrete \& continuous least squares  &  \hw  \\
+\wk   & 4/22  & \S5.3 &  Orthogonal polynomials and least squares  & \hw  \\
+\wk   & 4/29   &   class notes      & Differential equations &  \textbf{\ex, 3 May}     \\
+\wk   & 5/6   &  class notes       & Differential equations   &  \\
+\wk   & 5/13       &  &  &  \textbf{Final 13 May,  8:00 am--10:00 am} \\ \hline
 \end{tabular}
 \end{center}
 
@@ -312,9 +311,10 @@ to the course calendar, exam dates, and due dates or specifics for
 course assessments. 
 
 
-\item Extra credit is not allowed. 
+\item Extra credit is not allowed. Redoing an assessment to earn a higher grade is not allowed.
 
-
+\item I will accept homework that is submitted late only with prior approval and for a good and substantial reason. Homework 
+that is submitted late with no approval will not be graded and will earn you a grade of zero.
 
 \item For examinations, you may use a teacher provided quick reference sheet, 
 but no other reference materials. You may also use a pencil, eraser, 
