--- a/syllabus-math-420-cybr-304-spring-2024.tex
+++ b/syllabus-math-420-cybr-304-spring-2024.tex
@@ -293,8 +293,9 @@ example) while taking a test will earn you a grade of zero on that assessment.
 
 \begin{enumerate}
 
-\item Regular in person class attendance is required. If you are ill or need to miss 
-class due to athletics, please let me know ahead of time and I will make an effort to put the class on Zoom.
+\item Regular in person class attendance is required. If you are ill or need to miss a 
+class due to athletics, please let me know ahead of time and I will make an effort to put the class on Zoom. Additionally,
+when you miss class, please ask a classmate to take class notes for you.  My class notes are intended for my use and they are \emph{not} a good guide to our class, so generally I will not provide you with my class notes. 
 
 \item For examinations and in class assignments, show your work.  \emph{No credit will be given for multi-step problems without the necessary work. Your solution must contain enough detail
 so that I am convinced that you could correctly work any similar problem.} Also erase or clearly mark any work you want me to ignore; otherwise,
@@ -314,10 +315,10 @@ course assessments.
 \item Extra credit is not allowed. Redoing an assessment to earn a higher grade is not allowed.
 
 \item I will accept homework that is submitted late only with prior approval and for a good and substantial reason. Homework 
-that is submitted late with no approval will not be graded and will earn you a grade of zero.
+that is submitted late with no prior approval will not be graded and will earn you a grade of zero.
 
-\item For examinations, you may use a teacher provided quick reference sheet, 
-but no other reference materials. You may also use a pencil, eraser, 
+\item For examinations, you may use a teacher provided quick reference sheet (if any)
+but no other reference materials.  You may also use a pencil, eraser, 
 and a scientific calculator. For examinations, your phone and all such
 devices must be turned off and \emph{out of sight}. 
 
