--- a/syllabus-math-420-cybr-304-spring-2024.tex
+++ b/syllabus-math-420-cybr-304-spring-2024.tex
@@ -135,7 +135,7 @@ Exam \rom{\theex}}
   \textbf{First homework due} \dotfill  \printdate{27/1/\the\year}  \\
   \textbf{Exam \rom{1}} \dotfill \printdate{23/2/\the\year}  \\
   \textbf{Exam \rom{2}} \dotfill  \printdate{5/4/\the\year} \\
-  \textbf{Exam \rom{3}} \dotfill \printdate{5/5/\the\year} \\
+  \textbf{Exam \rom{3}} \dotfill \printdate{3/5/\the\year} \\
   \textbf{Final exam} \dotfill  \finaldateandtime
 \end{mypar}
 
@@ -522,7 +522,7 @@ and varied life experiences is essential to learning from our similarities as
 well as our differences. The following link provides resources and other 
 information regarding D\&I: \url{https://www.unk.edu/about/equity-access-diversity.php}.
 
-
+\includepdf[pages={1-},angle=90]{door_schedule.pdf}  
 \end{document}
 
 \vspace{0.1in}
